# raoe-core

./: CMakeLists.txt  readme.md
cmake/: add-module.cmake
core/: CMakeLists.txt  mod.ixx
core/include/core/: check.hpp  const_math.hpp  core.hpp  debug.hpp  enum.hpp  fixed.hpp  format.hpp  from_string.hpp  parse.hpp  rc.hpp  stream.hpp  string.hpp  subclass_map.hpp  typename.hpp  types.hpp  uri.hpp  uuid.hpp
core/include/tag/: tag.hpp
core/test/: CMakeLists.txt  stream_test.cpp  tag_test.cpp  uri_test.cpp  uuid_test.cpp
engine/: CMakeLists.txt
engine/assets/core/core/shader/: common.glsl  immediate_2d.frag.glsl  immediate_2d.vert.glsl
engine/assets/core/core/shaders/: common.glsl  common.vert.glsl  error.frag.glsl  error.rshader  generic_2d.frag.glsl  generic_2d.rshader
engine/assets/packs/core/: core.toml
engine/assets/packs/core/core/shader/: common.glsl
engine/include/: engine.hpp
engine/include/engine/: asset.hpp  asset_path.hpp  coro.hpp  engine.hpp  render.hpp
engine/include/engine/sys/: pack.hpp  window.hpp
engine/include/engine/tile/: tile2d.hpp  tile3d.hpp  tile_shared.hpp  tile_storage.hpp  tile_types.hpp
engine/src/: asset.cpp  engine.cpp  render.cpp
engine/src/assets/: asset_loader_material.cpp  asset_loader_texture.cpp
engine/src/sys/: pack.cpp  window.cpp
engine/src/tile/: tile2d.cpp  tile3d.cpp  tile_shared.cpp
engine/test/: CMakeLists.txt  test_assets.cpp  test_coro.cpp  test_tile_shared.cpp
filesystem/: CMakeLists.txt
filesystem/include/fs/: filesystem.hpp
filesystem/src/: filesystem.cpp
renderer/: CMakeLists.txt  readme.md
renderer/include/render/: buffer.hpp  colors.hpp  immediate.hpp  mesh.hpp  mesh_builder.hpp  render.hpp  shader.hpp  texture.hpp  types.hpp
renderer/src/: buffer.cpp  immediate.cpp  mesh.cpp  render.cpp  render_private.hpp  shader.cpp  texture.cpp
renderer/test/: CMakeLists.txt  shader_preprocessor_test.cpp
